--- a/style.css
+++ b/style.css
@@ -115,6 +115,7 @@ body {
           display: flex;
           flex-direction: column;
           margin: 10px;
+          padding: 10px;
   }
 figure {
         display: inline-block;
@@ -122,9 +123,9 @@ figure {
   }
     figcaption {
         display: block;
+        font-size: 15px;
         text-align: center;
-        font-size: 20px;
-        text-align: center;
+        padding-top: 110px;
     }
 
   .random-quote {
